<resources>
    <string name="app_name">BreakingBad</string>
    <string name="category">category:</string>
    <string name="filter">filter</string>
    <string name="search">search</string>
    <string name="character">character</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nickname">nickname:</string>
    <string name="portrayed">portrayed:</string>
    <string name="status">status:</string>
    <string name="occupation">occupation:</string>
    <string name="appearance">appearance:</string>
    <string name="betterCallSoul">Better Call Soul:</string>
    <string name="appearance_one">Appearance one</string>
    <string name="appearance_two">Appearance two</string>
    <string name="appearance_three">Appearance three</string>
    <string name="appearance_four">Appearance four</string>
    <string name="appearance_five">Appearance five</string>
    <string name="breakingBad">BreakingBad</string>
</resources>